--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,18 +15,31 @@
 <link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/animate.css" />
 <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/responsive.css" />
 <link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/syntax.css" />
+<!--Team-->
+
+<link href="{{ site.url}}{{ site.baseurl }}/css/team/rotating-card.css" rel='stylesheet' />
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+
+<!--Agenda-->
+<link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/fullcalendar.css"/>
+<link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/fullcalendar2.css"/>
+<link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/fullcalendar.print.css" media='print' />
 
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
-<script src="{{ site.baseurl }}/js/owl.carousel.min.js"></script>
-<script src="{{ site.baseurl }}/js/plugins.js"></script>
-<script src="{{ site.baseurl }}/js/min/waypoints.min.js"></script>
-<script src="{{ site.baseurl }}/js/jquery.counterup.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/bootstrap.min.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/owl.carousel.min.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/plugins.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/min/waypoints.min.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/jquery.counterup.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/main.js"></script>
 
-
-<script src="{{ site.baseurl }}/js/main.js"></script>
+<!--Agenda-->
+<script src="{{ site.url}}{{ site.baseurl }}/js/calendar/jquery-ui.custom.min.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/calendar/fullcalendar.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/calendar/fullcalendar2.js"></script>
+<script src="{{ site.url}}{{ site.baseurl }}/js/calendar/eventscalendar.js"></script>
 
 <!--
 /*
