--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 <!--Team-->
 
 <link href="{{ site.url}}{{ site.baseurl }}/css/team/rotating-card.css" rel='stylesheet' />
-<link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
 <!--Agenda-->
 <link rel="stylesheet" href="{{ site.url}}{{ site.baseurl }}/css/fullcalendar.css"/>
